--- a/config/motion_trim.env
+++ b/config/motion_trim.env
@@ -227,5 +227,58 @@ TARGET_FPS=10.0
 MIN_SAVINGS_PCT=5.0
 
 # ==============================================================================
+# --- PARALLEL VIDEO STREAMS ---
+# ==============================================================================
+
+# PARALLEL_STREAMS (default: 0 = auto-detect)
+# -----------------------------------------------------------------------------
+# Number of videos to process concurrently in batch mode.
+# Each stream is a separate worker thread that processes videos from a queue.
+#
+# 0 (default) = Auto-detect based on available CPUs (uses all CPUs)
+#
+# How it works:
+# - In batch mode, multiple videos are processed simultaneously
+# - Each stream gets its own CPU set based on THREADS_PER_STREAM
+# - All available CPUs are used (no reservation)
+# - Docker-compose CPU limits are respected automatically
+#
+# Examples:
+#   0   = Auto-detect (uses all CPUs)
+#   1   = Single video at a time (sequential)
+#   2   = Two videos in parallel
+#   4   = Four videos in parallel
+#
+PARALLEL_STREAMS=3
+
+# THREADS_PER_STREAM (default: 0 = auto-calculate)
+# -----------------------------------------------------------------------------
+# This value controls THREE things per stream:
+#   1. Number of internal chunk scanning threads
+#   2. Number of CPUs allocated to the stream (via thread pinning)
+#   3. Number of CPUs for FFmpeg process (via taskset)
+#
+# 0 (default) = Auto-calculate as (available_cpus / parallel_streams)
+# N           = Use exactly N threads and N CPUs per stream
+#
+# CPU ALLOCATION EXAMPLE (8 CPUs, PARALLEL_STREAMS=4, THREADS_PER_STREAM=2):
+#
+#   Stream 0 -> CPUs [0,1]  (2 scanning threads + FFmpeg pinned to 0,1)
+#   Stream 1 -> CPUs [2,3]  (2 scanning threads + FFmpeg pinned to 2,3)
+#   Stream 2 -> CPUs [4,5]  (2 scanning threads + FFmpeg pinned to 4,5)
+#   Stream 3 -> CPUs [6,7]  (2 scanning threads + FFmpeg pinned to 6,7)
+#
+# IMPORTANT:
+#   Total CPUs used = PARALLEL_STREAMS × THREADS_PER_STREAM
+#   This should NOT exceed available CPUs for optimal performance.
+#
+# RECOMMENDED CONFIGURATIONS:
+#   8 CPUs: PARALLEL_STREAMS=4, THREADS_PER_STREAM=2 (4×2 = 8)
+#   8 CPUs: PARALLEL_STREAMS=2, THREADS_PER_STREAM=4 (2×4 = 8)
+#  16 CPUs: PARALLEL_STREAMS=4, THREADS_PER_STREAM=4 (4×4 = 16)
+#
+THREADS_PER_STREAM=2
+
+# ==============================================================================
 # END OF CONFIGURATION
 # ==============================================================================
