Using MMAP to load files; Better use of resources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,44 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+# * STEP:1 - Detect Cache Line Size of the system :
+message(STATUS "Attempting to detect cache line size by compiling & running a utility...")
+
+try_run(
+  # These variables will hold the results of the operation
+  RUN_RESULT_CODE    ## Exit code of the utility binary
+  COMPILE_RESULT     ## SUCCESS (0) or FAILURE(non-zero)
+
+  # The directory where the test binary will be built. Must be an absolute path.
+  "${CMAKE_BINARY_DIR}/cacheLineTest"
+
+  # The source file to compile and run. Must be an absolute path.
+  "${CMAKE_SOURCE_DIR}/tools/cacheLineSize.cpp"
+
+  # This option tells try_run to store the standard output from the program
+  # in the specified variable.
+  RUN_OUTPUT_VARIABLE DETECTED_CACHE_LINE_SIZE
+)
+
+# * Step:2 - Process the result :
+if(COMPILE_RESULT AND "${RUN_RESULT_CODE}" STREQUAL "0")
+  # The output might have leading/trailing whitespace, so we clean it up.
+  string(STRIP "${DETECTED_CACHE_LINE_SIZE}" DETECTED_CACHE_LINE_SIZE)
+  message(STATUS "Successfully detected cache line size: ${DETECTED_CACHE_LINE_SIZE} bytes.")
+else()
+  # If the process failed, fall back to safe default and warn
+  set(DETECTED_CACHE_LINE_SIZE 64) # Common and safe default
+  message(WARNING "Couldn't determine cache line size automatically. Falling back to a default of ${DETECTED_CACHE_LINE_SIZE} bytes. Performance may not be optimal.")
+  if(NOT COMPILE_RESULT)
+    message(WARNING "Reason: The utility failed to compile.")
+  else()
+    message(WARNING "Reason: The utility program ran but exited with the code: ${RUN_RESULT_CODE}.")
+  endif()
+endif()
+
+# * Step:3 - Pass the Captured Value as a Compile time constant :
+add_compile_definitions(SYSTEM_CACHE_LINE_SIZE=${DETECTED_CACHE_LINE_SIZE})
+
 ################################################################################
 # Build Type Specific Compiler Flags
 ################################################################################
