--- a/config/motion_trim.env
+++ b/config/motion_trim.env
@@ -1,5 +1,5 @@
 # ==============================================================================
-# Motion Vector DVR Cutter - Configuration File
+# Motion Vector DVR Trimmer - Configuration File
 # ==============================================================================
 #
 # This file controls how the motion detection algorithm works. Adjusting these
@@ -213,7 +213,10 @@ TARGET_FPS=10.0
 # MIN_SAVINGS_PCT (default: 5.0)
 # -----------------------------------------------------------------------------
 # Minimum percentage of video that must be cut before outputting a new file.
-# If the savings are below this threshold, the original file is kept as-is.
+# If the motion removal results in less than this percentage of savings,
+# the cutting process is skipped, and the ORIGINAL file is copied to the output.
+# This ensures that files with significant motion (or little savings) are preserved
+# entirely, which is critical if the input directory is regulated/deleted.
 #
 # This prevents creating nearly-identical output files when there's little
 # to cut, saving disk space and processing time.
@@ -249,7 +252,7 @@ MIN_SAVINGS_PCT=5.0
 #   2   = Two videos in parallel
 #   4   = Four videos in parallel
 #
-PARALLEL_STREAMS=3
+PARALLEL_STREAMS=2
 
 # THREADS_PER_STREAM (default: 0 = auto-calculate)
 # -----------------------------------------------------------------------------
@@ -277,7 +280,19 @@ PARALLEL_STREAMS=3
 #   8 CPUs: PARALLEL_STREAMS=2, THREADS_PER_STREAM=4 (2×4 = 8)
 #  16 CPUs: PARALLEL_STREAMS=4, THREADS_PER_STREAM=4 (4×4 = 16)
 #
-THREADS_PER_STREAM=2
+THREADS_PER_STREAM=1
+
+# WATCH_MODE (default: 0 = disabled)
+# -----------------------------------------------------------------------------
+# Enable continuous monitoring of the input directory for new files.
+#
+# 0 (default) = Process existing files and exit (Batch Mode)
+# 1           = Monitor directory and process new files as they arrive (Watch Mode)
+#
+# Note: In Watch Mode, the application will not exit. It polls the directory
+#       every few seconds for new content.
+#
+WATCH_MODE=1
 
 # ==============================================================================
 # END OF CONFIGURATION
